# osmon

./: .gitignore  Cargo.toml  default.nix  flake.nix  gc.osm  justfile  license-apache  license-mit  readme.md  shell.nix
.github/workflows/: release.yml  test.yml
src/: ast2cpp.rs  cli.rs  err.rs  eval.rs  gccjit.rs  lib.rs  main.rs  semantic.rs
src/backend/: gccjit.rs  llvm.rs  mod.rs
src/ir/: builder.rs  macros.rs  mod.rs
src/optimize/: builtins.rs  const_eval.rs  mod.rs
src/semck/: mod.rs
src/syntax/: interner.rs  parser.rs  position.rs
src/syntax/ast/: display.rs  mod.rs
src/syntax/lexer/: mod.rs  reader.rs  token.rs
stage_1/: makefile
stage_1/src/: ast.osmx  idgen.osmx  main.osmx
stage_1/src/std/: display.osmx  int.osmx
std/: alloc.osmx  display.osmx  hash.osmx  libc.osmx  random.osmx  vector.osmx
tests/: run_tests.rs
tests/code_tests/: constexpr_test.osmx
