[package]
name = "havo"
version = "0.1.0"
edition = "2021"
homepage = "https://osmon.dev"
documentation = "https://wiki.osmon.dev"
repository = "https://github.com/osmon-lang/havo"
description = "Static compiler built for Osmon Programming Language"
authors = ["Yuri Katsuki <yuri@katsuki.moe>"]
readme = "readme.md"
keywords = ["compiler", "uzbek", "osmon"]
license = "Apache-2.0"
exclude = ["target"]

[dependencies]
parking_lot = "0.12.1"
wrc = "2.0.0"
lazy_static = "1.4.0"
colored = "2.0.0"
structopt = "0.2"
gccjit = {git = "https://github.com/osmon-lang/gccjit"}
clap = "4.1.11"
linked-hash-map = "0.5.6"

[dev-dependencies]
lang_tester = {git = "https://github.com/softdevteam/lang_tester"}
tempdir = "0.3"

